<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
    <!-- Trang chu    -->
    <fragment
        android:id="@+id/nav_home"
        android:name="com.team5.tgdd.fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <!-- Tai khoan -->
    <fragment
        android:id="@+id/nav_account"
        android:name="com.team5.tgdd.fragment.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />

    <!-- Shop -->
    <fragment
        android:id="@+id/nav_shop"
        android:name="com.team5.tgdd.fragment.ShopFragment"
        android:label="@string/menu_shop"
        tools:layout="@layout/fragment_shop" />
    
    <!-- Hoa don -->
    <fragment
        android:id="@+id/nav_build"
        android:name="com.team5.tgdd.fragment.AccountFragment"
        android:label="@string/menu_build"
        tools:layout="@layout/fragment_account" />

    <!-- Gio hang -->
    <fragment
        android:id="@+id/nav_cart"
        android:name="com.team5.tgdd.fragment.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />

    <!-- Dang xuat -->
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.team5.tgdd.fragment.AccountFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_account" />

</navigation>