<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.AccountFragment"
    >
    <View
        android:layout_width="match_parent"
        android:layout_height="64dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:padding="16dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_phone_number"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_phoneNumber_account"
            android:textColor="@color/black"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:padding="16dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_name"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_name_account"
            android:textColor="@color/black"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:padding="16dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_address"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_address_account"
            android:textColor="@color/black"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/tv_edit_info"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_margin="16dp"
            android:background="@drawable/my_button"
            android:text="@string/edit_info_bnt"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAlignment="center"
            android:gravity="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/tv_change_password"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_margin="16dp"
            android:background="@drawable/my_button"
            android:text="@string/edit_password_bnt"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAlignment="center"
            android:gravity="center" />
    </LinearLayout>
</LinearLayout>