<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".view.SignUpActivity"
    android:theme="@style/Theme.TGDD">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:boxStrokeColor="@color/box_color_til"
                    app:errorEnabled="true"
                    android:textColorHint="@color/black"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:hint="@string/name"
                        app:boxStrokeColor="@color/box_color_til"
                        android:textColorHint="@color/black"
                        android:textColor="@color/black"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:boxStrokeColor="@color/box_color_til"
                    app:errorEnabled="true"
                    android:textColorHint="@color/black"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:hint="@string/phone_number"
                        app:boxStrokeColor="@color/box_color_til"
                        android:textColorHint="@color/black"
                        android:textColor="@color/black"
                        android:inputType="phone"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:boxStrokeColor="@color/box_color_til"
                    app:errorEnabled="true"
                    android:textColorHint="@color/black"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:hint="@string/address"
                        app:boxStrokeColor="@color/box_color_til"
                        android:textColorHint="@color/black"
                        android:textColor="@color/black"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_pass_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:boxStrokeColor="@color/box_color_til"
                    app:errorEnabled="true"
                    android:textColorHint="@color/black">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:hint="@string/pass_word"
                        app:boxStrokeColor="@color/box_color_til"
                        android:textColorHint="@color/black"
                        android:textColor="@color/black"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_repass_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:boxStrokeColor="@color/box_color_til"
                    app:errorEnabled="true"
                    android:textColorHint="@color/black"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:hint="@string/repass_word"
                        app:boxStrokeColor="@color/box_color_til"
                        android:textColorHint="@color/black"
                        android:textColor="@color/black"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/my_button"
                    android:text="@string/sign_bnt"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textAlignment="center"
                    android:gravity="center" />
                <LinearLayout
                    android:id="@+id/openLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/login_question"
                        android:textColor="@color/black"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/login_bnt"
                        android:textColor="@color/black"
                        android:textSize="17sp"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</LinearLayout>