<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ChangePasswordActivity"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:theme="@style/Theme.TGDD">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password1_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/box_color_til"
        app:errorEnabled="true"
        android:textColorHint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:hint="@string/pass_word"
            app:boxStrokeColor="@color/box_color_til"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password2_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/box_color_til"
        app:errorEnabled="true"
        android:textColorHint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:hint="@string/repass_word"
            app:boxStrokeColor="@color/box_color_til"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/tv_yes"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="16dp"
        android:background="@drawable/my_button"
        android:text="@string/yes_btn"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textAlignment="center"
        android:gravity="center"/>
</LinearLayout>