<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.DetailProductActivity"
    android:orientation="vertical"
    android:theme="@style/Theme.TGDD">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vp_detail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9.5"
            tools:ignore="NestedWeights" />
        <me.relex.circleindicator.CircleIndicator
            android:id="@+id/ci_detail"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:ci_drawable="@color/black"
            android:layout_weight="0.5"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_name_product"
            style="@style/TextAppearance.AppCompat.Title"
            android:padding="8dp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_price_product"
            android:padding="8dp"
            style="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/black"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@color/navigationBarColor">
                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:text="@string/brand_product"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/tv_brand_product"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp">
                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:text="@string/display"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/tv_display"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@color/navigationBarColor">
                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:text="@string/os"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/tv_os"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                >
                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:text="@string/front_camera"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/tv_front_camera"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@color/navigationBarColor">
                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:text="@string/behind_camera"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/tv_behind_camera"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                >
                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:text="@string/cpu"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/tv_cpu"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@color/navigationBarColor">
                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:text="@string/ram"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/tv_ram"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                >
                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:text="@string/rom"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/tv_rom"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@color/navigationBarColor">
                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:text="@string/sim"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/tv_sim"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                >
                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:text="@string/pin"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/tv_pin"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <EditText
            android:id="@+id/tvQNT"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/black"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/addToCart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:background="@color/tool_bar_bg"
            android:gravity="center"
            android:text="@string/add_to_cart"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>